tests/fixtures/invalid/min_one_arg.py
# min() requires at least 2 arguments
print(min(1))
